# lime-lang

./: Cargo.toml  README.md
crates/lime-analyzer/: Cargo.toml
crates/lime-analyzer/src/: backend.rs  main.rs
crates/lime-syntax/: Cargo.toml
crates/lime-syntax/src/: lib.rs  span.rs
