[package]
name = "lime-syntax"
edition = "2024"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ropey.workspace = true
tower-lsp.workspace = true
derive_screaming_snake_case = "1.0.0"

[lints]
workspace = true
